--- a/src/pages/login/login.html
+++ b/src/pages/login/login.html
@@ -14,5 +14,15 @@
 
 
 <ion-content padding>
+  <div id="hide">
+  <!-- <div id="hide" style="visibility:hidden;"> -->
+  <br><br><br>
+  <h1 text-center> InventorBeer </h1>
+  <br><br><br><br><br><br>
+  <button ion-button primary block (click)="login()" *ngIf="!users">Login With Google</button>
+  <br>
+  <br>
+  <!-- <button ion-button secondary block (click)="goHome()">Continue</button> -->
+  </div>
 
 </ion-content>
